force-app/main/default/objects/EventLogFileParsing__c/EventLogFileParsing__c.object-meta.xml
<CustomObject>
    <label>EventLogFile Parsing</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EventLogFile Parsings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>