force-app/main/default/objects/EventLogFileParsing__c/fields/ApiVersion__c.field-meta.xml
<CustomField>
    <fullName>ApiVersion__c</fullName>
    <label>API Version</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>