force-app/main/default/objects/EventLogFileParsing__c/fields/ExceptionsCount__c.field-meta.xml
<CustomField>
    <fullName>ExceptionsCount__c</fullName>
    <label>Exceptions Count</label>
    <summaryForeignKey>ApexUnexpectedException__c.EventLogFileParsing__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>