force-app/main/default/objects/EventLogFileParsing__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EventLogFile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>