force-app/main/default/objects/EventLogFileParsing__c/fields/LogDate__c.field-meta.xml
<CustomField>
    <fullName>LogDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>