force-app/main/default/objects/EventLogFileParsing__c/fields/LogFileFieldNames__c.field-meta.xml
<CustomField>
    <fullName>LogFileFieldNames__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Log File Field Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>