force-app/main/default/objects/EventLogFileParsing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Id__c</columns>
    <columns>ExceptionsCount__c</columns>
    <columns>ParsingTimestamp__c</columns>
    <columns>LogDate__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>